fix: translate button and mobile whitespace

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -37,6 +37,7 @@
     padding: 1rem 0 1rem 1rem;
     font-weight: 700;
     font-size: .93rem;
+    border: none;
 }
 
 /* from metro.net */
